@@ -1,0 +1,10 @@
+from enum import Enum
+
+class ExtractType(Enum):
+    POSTGRES = "postgres"
+    API = "api"
+    UNKNOWN = "unknown"
+
+class LoadType(Enum):
+    POSTGRES = "postgres"
+    UNKNOWN = "unknown"
